<resources>
    <string name="app_name">NoteApp</string>
    <string name="new_note_name">New Note</string>

    <string name="title_activity_note">TextNoteActivity</string>

    <string name="textnote_title_hint">Enter a title for the text note</string>

    <string name="notes_title">Notes</string>
    <string name="edit_note">Edit Note</string>

    <string name="delete_note">Delete Note</string>

    <string-array name="repeater_array">
        <item>Does not repeat</item>
        <item>Every day</item>
        <item>Every week</item>
        <item>Every month</item>
        <item>Every year</item>
    </string-array>
    <string name="title_activity_drawer">drawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="pref_sms_storage_title">Storage Options</string>
    <string name="pref_summary_delete_all">Delete all notes and archived notes</string>
    <string name="pref_title_delete_all">Delete All</string>
    <string name="pref_summary_backup">Backup notes to the root of your device.
        WARNING: Only one backup instance can exist at any time</string>
    <string name="pref_title_backup">Backup Notes</string>
    <string name="pref_summary_restore">Restore notes from your last backup
        WARNING: Any notes not included in the backup will be deleted!</string>
    <string name="pref_title_restore">Restore Notes</string>
    <string name="pref_summary_about">About Notes</string>
    <string name="pref_title_about">About</string>
    <string name="pref_about_category_title">About</string>
</resources>
