<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <PreferenceCategory
        android:title="@string/pref_sms_storage_title"
        android:key="pref_key_storage_settings">
        <Preference
            android:key="pref_key_delete_all"
            android:summary="@string/pref_summary_delete_all"
            android:title="@string/pref_title_delete_all" />
        <Preference
            android:key="pref_key_backup"
            android:summary="@string/pref_summary_backup"
            android:title="@string/pref_title_backup" />
        <Preference
            android:key="pref_key_restore"
            android:summary="@string/pref_summary_restore"
            android:title="@string/pref_title_restore" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_about_category_title"
        android:key="pref_key_about_category">
        <Preference
            android:key="pref_key_about"
            android:summary="@string/pref_summary_about"
            android:title="@string/pref_title_about" />
    </PreferenceCategory>
</PreferenceScreen>